VPC DNS and DHCP/1. CustomDNSWithRoute53PrivateHostedZone/network.yaml
AWSTemplateFormatVersion: "2010-09-09"
Resources:
  #VPC y subnets
  MyVPCCF:
    DeletionPolicy: Delete
    Type: AWS::EC2::VPC
    Properties:
      EnableDnsHostnames: true #Nota: El DNSHostname tiene que estar habilitado para que funcione el DHCP Options Set, ademas, debe
      #hacerse antes de levantar cualquier instancia, de lo contrario, esta no estará configurada con el DNS de la VPC y se debera rebootear
      CidrBlock: 10.100.0.0/16
      Tags:
        - Key: Name
          Value: MyVPCCF
  MyInternetGatewayCF:
    Type: AWS::EC2::InternetGateway
  AttachGateway:
    DeletionPolicy: Delete
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: MyVPCCF
      InternetGatewayId:
        Ref: MyInternetGatewayCF
  MyPublicSubnetCF:
    DeletionPolicy: Delete
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-2a
      VpcId:
        Ref: MyVPCCF
      CidrBlock: 10.100.0.0/24
      MapPublicIpOnLaunch: true #Con esto, se asigna automaticamente una ip publica a las instancias levantadas en esta subnet de manera automatica
      Tags:
        - Key: Name
          Value: MyPublicSubnetCF
  MyRouteTableCF:
    DeletionPolicy: Delete
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: MyVPCCF
  PublicRoute:
    DeletionPolicy: Delete
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId:
        Ref: MyRouteTableCF
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: MyInternetGatewayCF
  AssociateRouteTable:
    DeletionPolicy: Delete
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: MyPublicSubnetCF
      RouteTableId:
        Ref: MyRouteTableCF
  #DHCP Options
  DHCPOptions:
    DeletionPolicy: Delete
    Type: "AWS::EC2::DHCPOptions"
    Properties:
      DomainName: "corp.internal"
      DomainNameServers:
        - "AmazonProvidedDNS"
  DHCPOptionsAssociation:
    DeletionPolicy: Delete
    Type: "AWS::EC2::VPCDHCPOptionsAssociation"
    Properties:
      VpcId: 
        Ref: MyVPCCF
      DhcpOptionsId: 
        Ref: DHCPOptions
  #Private Hosted Zone
  PrivateHostedZone: #No se especifica en CF si la zona es privada o pública de manera explicita, se infiere por si esta asociada a una VPC o no
    DeletionPolicy: Delete
    Type: AWS::Route53::HostedZone
    Properties:
      Name: corp.internal
      VPCs:
        - VPCId: 
            Ref: MyVPCCF
          VPCRegion: us-east-2
  #EC2 Instances and SG
  SecurityGoup:
    DeletionPolicy: Delete
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH and All ICMP Ipv4
      VpcId:
        Ref: MyVPCCF
      SecurityGroupIngress:
        - IpProtocol: tcp #Regla para SSH
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: icmp #Regla para ping
          FromPort: -1
          ToPort: -1
          CidrIp: 10.100.0.0/16
  InstanceA:
    DeletionPolicy: Delete
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-03f38e546e3dc59e1
      InstanceType: t2.micro
      KeyName: miatechdeveast2
      PrivateIpAddress: "10.100.0.11"
      SubnetId:
        Ref: MyPublicSubnetCF
      SecurityGroupIds:
        - Ref: SecurityGoup
      Tags:
        - Key: Name
          Value: InstanceA
  InstanceB:
    DeletionPolicy: Delete
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-03f38e546e3dc59e1
      InstanceType: t2.micro
      KeyName: miatechdeveast2
      PrivateIpAddress: "10.100.0.15"
      SubnetId:
        Ref: MyPublicSubnetCF
      SecurityGroupIds:
        - Ref: SecurityGoup
      Tags:
        - Key: Name
          Value: InstanceB
  # Record set
  MyRecordSetA: #La routing policy es simple, cambia a alguna otra basada en su configuracion
    Type: "AWS::Route53::RecordSet"
    DeletionPolicy: Delete
    Properties:
      HostedZoneId: 
        Ref: PrivateHostedZone
      Name: "instancea.corp.internal"
      Type: "A"
      TTL: "300"
      ResourceRecords:
        - "10.100.0.11"
  MyRecordSetB:
    Type: "AWS::Route53::RecordSet"
    DeletionPolicy: Delete
    Properties:
      HostedZoneId: 
        Ref: PrivateHostedZone
      Name: "instanceb.corp.internal"
      Type: "A"
      TTL: "300"
      ResourceRecords:
        - "10.100.0.15"
